--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,18 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  provider: ^6.1.1
+
   firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  firebase_ui_auth: ^1.12.1
+  cloud_firestore: ^4.14.0
+  google_fonts: ^6.1.0
+  go_router: ^13.1.0
 
 dev_dependencies:
   flutter_test:
