--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -4,6 +4,7 @@ flutter_launcher_icons:
 
   android: "launcher_icon"
   adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/images/app_logo.png"
   min_sdk_android: 21
 
   ios: true
