학사 일정 스크랩핑
* 서울대학교 학사일정 스크랩
* HTML 응답 파싱
* 매학기 개강 및 종강 일자 추출
* 정기회의 일자 생성 유틸 추가

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.3.10
   async: ^2.11.0
+  http: ^1.2.0
+  html: ^0.15.4
 
 dev_dependencies:
   flutter_test:
