UI 디자인 작업 반영
* dropdown UI 문제 해결
* 스낵바 UI 추가
* 스낵바 패키지 추가
* 기타 UI 수정 반영

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   async: ^2.11.0
   http: ^1.2.0
   html: ^0.15.4
+  another_flushbar: ^1.12.30
 
 dev_dependencies:
   flutter_test:
