--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:555330865633:ios:3040f03e7bc490bf83aaa0",
-  "FIREBASE_PROJECT_ID": "snulife-internal",
-  "GCM_SENDER_ID": "555330865633"
+  "GOOGLE_APP_ID": "1:900658840670:ios:5520098b435ca7fb2ce0cf",
+  "FIREBASE_PROJECT_ID": "snulife-internal-app",
+  "GCM_SENDER_ID": "900658840670"
 }
