--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,11 +1,11 @@
 flutter_native_splash:
   color: "#ffffff"
-  image: assets/images/app_logo.png
+  image: assets/images/app_logo_splash.png
   branding: assets/images/branding_text.png
   branding_mode: bottom
 
   android_12:
-    image: assets/images/app_logo.png
+    image: assets/images/app_logo_splash.png
     color: "#ffffff"
     icon_background_color: "#ffffff"
     branding: assets/images/branding_text.png
